--- a/src/templates/blocks/btn/btn.pug
+++ b/src/templates/blocks/btn/btn.pug
@@ -5,12 +5,12 @@ mixin btn(style = 'primary', type = 'link', agree = false, text)
                 .btn-inner
                     button(type="submit" class=`btn-${style}`)&attributes(attributes)
                         block
-                small Нажимая кнопку «отправить» #[a(href='/') я даю согласие на обработку персональных данных]
+                small Нажимая кнопку «отправить» #[a(target="_blank" href='https://hrupkie.ru/personal-data-usage-terms/') я даю согласие на обработку персональных данных]
             else
                 .btn-inner
                     a(href="javascript:void(0)" class=`btn-${style}`)&attributes(attributes)
                         block
-                small Нажимая кнопку «отправить» #[a(href='/') я даю согласие на обработку персональных данных]
+                small Нажимая кнопку «отправить» #[a(target="_blank" href='https://hrupkie.ru/personal-data-usage-terms/') я даю согласие на обработку персональных данных]
     else
         if type == 'submit'
             button(type="submit" class=`btn btn-${style}`)&attributes(attributes)!=text
